--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/PlagiarismDetector.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.stanford-english-corenlp-2016-10-31-models.jar=lib\\stanford-english-corenlp-2016-10-31-models.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.stanford-english-corenlp-2016-10-31-models.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -55,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Main
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
